Fix timer modal overlap

--- a/source/styles/styles.css
+++ b/source/styles/styles.css
@@ -121,7 +121,7 @@ a {
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  z-index: 2; /* Sit on top */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
